overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yapp-prod-ingress
  namespace: prod
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: yapp.suitestudy.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: neki-prod-service
            port:
              number: 8080
